--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "cross-env": "^3.0.0",
     "css-loader": "^0.25.0",
     "file-loader": "^0.9.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.5",
     "node-sass": "^4.5.0",
     "sass-loader": "^5.0.1",
     "vue-loader": "^12.1.0",
