--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "superagent": "^3.5.2",
     "vue": "^2.3.3"
   },
   "devDependencies": {
